--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo.png",
+      "src": "https://i.postimg.cc/zVD4mstP/Jazztabueno-(2).png",
       "sizes": "512x512",
       "type": "image/png"
     }
